Fix: BookmarkWordEnttity FetchType LAZY